// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`service errors should return a collection of errors responses 1`] = `
Object {
  "badCredentials": [Function],
  "critical": [Function],
  "docs": [Function],
  "missing": [Function],
  "unauth": [Function],
  "unsecureAPI": [Function],
  "unsecureType": [Function],
  "version": [Function],
}
`;

exports[`service errors should return a collection of errors responses 2`] = `
Object {
  "error": "Bad auth credentials",
}
`;

exports[`service errors should return a collection of errors responses 3`] = `
Object {
  "error": "Unknown internal critical error",
}
`;

exports[`service errors should return a collection of errors responses 4`] = `
Object {
  "error": "Something break while generating docs",
}
`;

exports[`service errors should return a collection of errors responses 5`] = `
Object {
  "error": "Route not found. And never been here",
}
`;

exports[`service errors should return a collection of errors responses 6`] = `
Object {
  "error": "Missing or invalid Authorization header",
}
`;

exports[`service errors should return a collection of errors responses 7`] = `
Object {
  "error": "Missing or invalid API token",
}
`;

exports[`service errors should return a collection of errors responses 8`] = `
Object {
  "error": "Missing or invalid content type header",
}
`;

exports[`service errors should return a collection of errors responses 9`] = `
Object {
  "error": "Unsupported version number",
}
`;
